src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A32.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A32 {
  interface A1;
  interface B1;
  read-only association A1 -> (foo) B1 [0..1];

  class A2 implements A1;
  class B2 implements B1;
  association A2 -> (foo) B2 [1]; // ok, because 1..1 is subset of 0..1
}
