src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A25_4.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A25_4 {

  interface TheInterface;
  class BSup;
  class B extends BSup;

  class C;
  class D extends B;

  association TheInterface <- BSup;
  association theInterface D <-> C;
}
